[project]
name = "gestalt-ugi"
version = "0.0.1a1"
requires-python = "==3.14.*"
dependencies = [
  "gestalt",
  "paramiko>=3.5,<4",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt = { git = "https://github.com/valon-technologies/gestalt.git", rev = "9a2d6ef795295d83f87f1068d26ebe00e8f0c354", subdirectory = "sdk/python" }

[tool.gestalt]
plugin = "provider"
