[package]
name = "gestalt_datastore_sqlstore"
version = "0.0.1-alpha.10"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
gestalt_plugin_sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "3cb9b8e57c9f033e8f7534c4b62ff3884cb54979", package = "gestalt_plugin_sdk" }
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "chrono", "sqlite", "postgres", "mysql"] }
uuid = { version = "1", features = ["v4"] }
